update allocation service
